JAVA: [Eclipse] - Projekt "ETS2_LiveStreamConverter"    - Anpassungen an Java21 und geänderte Bibliotheken
git-svn-id: file:///G/_svn_repo/programming/JAVA-Projects%20-%20Eclipse/ETS2_LiveStreamListConverter@7964 8592820e-bdd2-cc16-cb4b-ca06df7e8abd